--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Desiree
+first_name: Daisy
 middle_name: J. M.
 last_name: Fisker
 contact_note: >
